objects/ACROBj1__c.object
<CustomObject>
    <description>Sai mobile symbol test &#55357;&#56542; &#55357;&#56542;</description>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <description>Test sai kumar @#$%^&amp;*()_+-=?&gt;&lt;,./&quot;:;&apos;\][}{~!</description>
        <label>Field2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <description>sai phone symbol test &#55357;&#56542; and edit &#55357;&#56542;</description>
        <label>Field3</label>
        <type>Phone</type>
    </fields>
    <label>ACROBj1</label>
    <nameField>
        <label>ACROBj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACROBj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>